fix UI spacing

--- a/static/style.css
+++ b/static/style.css
@@ -41,7 +41,7 @@ body {
 
     width: 520px;
     max-width: 90%;
-    margin: 50px auto;
+    margin: 40px auto;
     background: white;
     padding: 35px;
     border-radius: 12px;
@@ -50,10 +50,9 @@ body {
 }
 
 .container h2 {
+    width: 70%;
+    margin: 0 auto 15px auto;
     text-align: left;
-    margin-bottom: 11px;
-    margin-top: 0;
-    padding-left: 35px;
 }
 
 
